Update various pages, created a careers page, stability and other misc patches to several pages

--- a/notes/todo
+++ b/notes/todo
@@ -1,8 +1,8 @@
--revamp search
---apptopia we're hiring page copy
+--revamp search
 --organize assets folder
 
+--apple icon not working
 
---make leader-divider a component
---organize code
--- remove leader-divier from global css and move it into its own component
+-- our locations, reuse locations in contact-us
+
+--imagify my pages.
