fix horizontal overflow in home page, and change body bg color

--- a/notes/todo
+++ b/notes/todo
@@ -1,7 +1,8 @@
 --revamp search
 
---apple icon not working
-
 --imagify my pages.
 
 --cleanup
+-- nav bar should stick to the top
+--mobile:
+--footer, background,text sizes, cols, dividers for dropdowns, 
