update footer + update nav bar

--- a/notes/todo
+++ b/notes/todo
@@ -3,6 +3,5 @@
 --imagify my pages.
 
 --cleanup
--- nav bar should stick to the top
 --mobile:
---footer, background,text sizes, cols, dividers for dropdowns, 
+--footer,text sizes, cols, dividers for dropdowns, 
