update navigation bar to be more responsive and UI friendly, small tweeks and general improvements

--- a/notes/todo
+++ b/notes/todo
@@ -3,5 +3,5 @@
 --imagify my pages.
 
 --cleanup
---mobile:
---footer,text sizes, cols, dividers for dropdowns, 
+
+--navigation: playlist dropdown bg color, cleanup, navigation in general,
