navigation page fully updated, minor tweeks and patches

--- a/notes/todo
+++ b/notes/todo
@@ -1,7 +1,5 @@
---revamp search
+revamp search
 
---imagify my pages.
 
---cleanup
 
---navigation: playlist dropdown bg color, cleanup, navigation in general,
+cleanup careers page 
