Add settings page

--- a/notes/todo
+++ b/notes/todo
@@ -2,6 +2,6 @@ views page
 
 setup google console
 
-adding loading when clicking show more
+profile - > mobile responsive
 
-maybe box shadow!
+still on settings page
