added new /Settings page

--- a/notes/todo
+++ b/notes/todo
@@ -5,3 +5,9 @@ setup google console
 profile - > mobile responsive
 
 still on settings page
+->>> need to EDIT ALOT OF THE CSS AND CLEAN THAT SHIT UP!! IF I AM LAZY, I SHOULD JUST DO A DAY WHERE I CLEAN SHIT UP!!!
+
+
+2. clean up html + css modules
+
+
