reworked settings page, current mockup

--- a/notes/todo
+++ b/notes/todo
@@ -7,7 +7,11 @@ profile - > mobile responsive
 still on settings page
 ->>> need to EDIT ALOT OF THE CSS AND CLEAN THAT SHIT UP!! IF I AM LAZY, I SHOULD JUST DO A DAY WHERE I CLEAN SHIT UP!!!
 
+- Onto billing
+- tweak? maybe? idk
 
-2. clean up html + css modules
+otherwise, mobile responsive + code clean up 
+
+workspace settings copy what vercel has for the title
 
 
