huge rework to nav and create playlist, various fixes, and typings added

--- a/notes/todo
+++ b/notes/todo
@@ -15,3 +15,4 @@ otherwise, mobile responsive + code clean up
 workspace settings copy what vercel has for the title
 
 
+carousel it's not exactly centered. need to fix this..
